# project_ws

./: .bashrc  README.md  mixed_robot_2.gv  notes for modeling
.jupyter/: desktop-settings.json
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
Imgs/: mixed_robot.gv
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/mobile_manipulator/: send_goals
devel/lib/pkgconfig/: arm_description.pc  arm_moveit_config.pc  diff_drive.pc  gmapping.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_launch.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  mixed_robot_model_pkg.pc  mobile_manipulator.pc  mobile_manipulator_body.pc  mobile_manipulator_moveit_config.pc  my_simulations.pc  pysdf.pc  robot.pc  robot_1_moveit_config.pc  robot_1_pkg.pc  robot_2.pc  robot_2_pkg.pc  robot_3.pc  teleop_twist_keyboard.pc
devel/lib/robot_2/: robot_2
devel/lib/teleop_twist_keyboard/: teleop_twist_keyboard.py
models/: mixed_robot_copy.urdf
models/urdf/: arm.config  mixed_robot.urdf  mixed_robot_2.urdf  robot_4.urdf
models/urdf/.ipynb_checkpoints/: mixed_robot-checkpoint.urdf  mixed_robot_2-checkpoint.urdf
notes/: TF_REPEATED  angles in radian  blue_box  boxes.txt  error on non unique  items_boxes_positions  notes for modeling  red_box  robot_base_velocity_controller  ros_controllers.yaml  roswtf  sliding behaviour  warehouse_pallet
src/arm_description/urdf/: delivery_robot.urdf  urdf_arm.urdf
src/arm_moveit_config/: .setup_assistant
src/arm_moveit_config/config/: manipulator.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
src/arm_moveit_config/launch/: gazebo.launch  ros_controllers.launch  sensor_manager.launch.xml
src/diff_drive/: CMakeLists.txt
src/diff_drive/urdf/: mixed_robot_1.urdf
src/my_simulations/: CMakeLists.txt
src/my_simulations/launch/: my_world.launch  view_demo.launch
src/my_simulations/world/: warehouse_world.world
src/robot/: .setup_assistant
src/robot/config/: fake_controllers.yaml  gazebo_mixed_robot.urdf  mixed_robot.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/robot/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/robot_1_pkg/: .setup_assistant  CMakeLists.txt
src/robot_1_pkg/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/robot_2/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_2/config/: fake_controllers.yaml  gazebo_controllers.yaml  joint_limits.yaml  kinematics.yaml  mixed_robot.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  sensors_kinect_depthmap.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/robot_2/configs/: BBoxes  Bstorages  RBoxes  Rstorages  boxes_in_delivery_box  boxes_pos  dispatches
src/robot_2/launch/: 12_world_gazebo.launch  1_my_world.launch  2_gazebo_options.launch  2_ros_controllers.launch  2_spawn_robot.launch  3_move_group_moveit.launch  3_moveit.launch  3_ros_controllers.launch  3_spawn_robot.launch  4_move_group_RViz.launch  4_move_group_moveit.launch  5_RViz.launch  5_amcl.launch  5_slam_gmapping.launch  6_RViz.launch  6_optional_db.launch  6_view_navigation.launch  amcl.launch  chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  robot_config.rviz  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse_simulation.launch
src/robot_2/maps/: warehouse.pgm
src/robot_2/models/urdf/: delivary_robot-Copy1.urdf  delivery_robot.xacro  mixed_robot.urdf
src/robot_2/models/urdf/.ipynb_checkpoints/: arm-checkpoint.urdf  delivary_robot-checkpoint.urdf  mixed_robot-Copy2-checkpoint.urdf  mixed_robot-checkpoint.urdf  mixed_robot_1-checkpoint.urdf  mixed_robot_2-checkpoint.urdf  robot_4-checkpoint.urdf
src/robot_2/models/warehouseObjects/: Dispatch.sdf  DispatchB.sdf  ProductB.sdf  ProductR.sdf
src/robot_2/models/warehouseObjects/mixed_robot/: model.config  model.sdf
src/robot_2/models/warehouseObjects/red_2_5_r/: model.config  model.sdf
src/robot_2/models/warehouse_pallet/: model.config  model.sdf
src/robot_2/models/warehouse_pallet_0/: model.config  model.sdf
src/robot_2/rvizConfig/: moveit.rviz  navigation.rviz
src/robot_2/scripts/: controlling_move.sh  mapping_slam.sh  warehouse_simulation.sh
src/robot_2/src/: 1_WarehouseSimulation.py  2_Robot.py  2_Storage.py  3_WarehouseObject.py  Dijkstra.cpp  Dijkstra.h  Floyd_Warshall.cpp  Floyd_Warshall.h  OrderController.cpp  OrderController.h  Robot.cpp  Robot.h  Storage.cpp  Storage.h  WarehouseSimulation.cpp
src/robot_2/world/: warehouse_world (copy).world  warehouse_world copy.world  warehouse_world.world
src/robot_2/world/.ipynb_checkpoints/: warehouse_world-checkpoint.world
(+65 files in other folders)
